--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +7,23 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title>Carrossel</title>
 </head>
-<body>
-    <div class="carrossel">
-        <div class="fotos">
-            <img src="img/Image_1.png">
-            <img src="img/Image_2.png">
-            <img src="img/Image_3.png">
-            <img src="img/Image_4.png">
-            <img src="img/Image_5.png">
-            <img src="img/Image_1.png">
+<body class="cor_site">
+    <div class="quadro">
+            <div class="carrossel">
+                <div class="fotos">
+                <img src="img/Image_1.png">
+                <img src="img/Image_2.png">
+                <img src="img/Image_3.png">
+                <img src="img/Image_4.png">
+                <img src="img/Image_5.png">
+                <img src="img/Image_6.png">
+                <img src="img/Image_7.png">
+                <img src="img/Image_8.png">
+                <img src="img/Image_9.png">
+                <img src="img/Image_10.png">
+                <img src="img/Image_11.png">
+                <img src="img/Image_1.png">
+            </div>
         </div>
     </div>
 </body>
